  the peer.URL class by replacing parse_str() by a handcrafted parser
  (friebe, Marius Rosoiu)
- Changed img.fonts.TrueTypeFont's constructor to throw an exception if
  the font cannot be found
  (friebe)
- Fixed Runtime::memoryUsage() and Runtime::peakMemoryUsage()
  (friebe)
- Fixed generics declaration parsing in create() and is()
  (friebe)

Features
~~~~~~~~
- Ports: Added support to Google custom search for Spelling suggestions 
  ("Did you mean"), Synonyms ("You could also try") and Key matches 
  (~ Adwords)
  (friebe)
 - Ports: Allowed passing arbitrary parameters in Google custom search
  implementatiom, com.google.search.custom.GoogleSearchClient::searchFor()
  (friebe)
- Added setXSLDoc(), setXMLDoc() to xml.DomXSLProcessor
  (kiesel)
- Implemented equals() method in xml.Node
  (friebe)
- Changed InputStream, OutputStream, Reader and StreamTransfer in 
  io.streams as well as their implementations to be closeable
  (friebe)
- Changed rdbms.ResultSet and all its implementations to be closeable
  (friebe)
- Implemented ARM blocks in XP language, supported by lang.Closeable 
  interface in framework.
  (friebe)
- Added text.regex.Pattern::replaceWith() method
  (friebe)
- Changed text.regex.Pattern not to throw exceptions on malformed 
  patterns like Pattern::compile(), and instead defer pattern validation 
  until actually matching the pattern - performance improvement
  (friebe)
- Made io.File::copy() and io.File::move() accept io.File and io.Folder 
  instances in addition to strings.
  (friebe)
- Added values() method to util.collections.HashTable
  (friebe)
- Implemented automatic encoding detection in io.stream.TextReader when
  NULL was given as encoding, based on BOM of stream
  (friebe, kiesel)
- Added support for multiple cookies in unittest.web.WebTestCase
  (kiesel, Felix Stahlberg)
- Added support for multiple header values to peer.http.HttpRequest
  (friebe)
- Implemented fluent interface for rdbms.finder API
  (friebe)